# shroud

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.secrets.toml  manifest.yml  pyproject.toml  settings.toml
scripts/: issue_token.py
shroud/: __main__.py
shroud/api/: app.py  auth.py
shroud/slack/handlers/: commands.py  dropdown.py  incoming_message.py  reactions.py
shroud/utils/: config.py  db.py  utils.py
